--- a/mobile/web/resources/css/index.css
+++ b/mobile/web/resources/css/index.css
@@ -9,7 +9,11 @@ body{
 .header{
 	width: 100%;
 	height: 30rem;
-	background: url(../img/j.jpg) no-repeat;
+	background: url(https://ascasc.oss-cn-hangzhou.aliyuncs.com/20181026112346fh767k51w.jpg) no-repeat;
+	background-size: cover;
+	-webkit-background-size: cover;
+	-o-background-size: cover;
+	background-position: center center;
 	color: #fff;
 }
 .header .ico_top{
