--- a/mobile/web/resources/css/estimate.css
+++ b/mobile/web/resources/css/estimate.css
@@ -50,10 +50,11 @@
     padding: 0 0.2rem;
     display: block;
     border: 1px solid #333333;
-    width: 4.8rem;
+    width: 4rem;
     height: 0.8rem;
     margin: 0.1rem auto;
     font-size: 0.36rem;
+    text-align: center;
 }
 
 .click {
