--- a/mobile/web/resources/css/reset.css
+++ b/mobile/web/resources/css/reset.css
@@ -44,3 +44,6 @@ table { border-collapse: collapse; border-spacing: 0; }
 input{
 	outline: none;
 }
+.area>select{
+    font-size: 1.4rem!important;
+}
