--- a/mobile/web/resources/css/personal.css
+++ b/mobile/web/resources/css/personal.css
@@ -22,12 +22,13 @@ body{
 .personal a{
 	float: left;
 	color: #3072F3;
+	display: inline-block;
+	width: 22.8%;
 }
 .personal img{
 	display: inline-block;
 	width: 77.1899%;
 	height: 4.75rem;
-	text-align: center;
 	margin-bottom: 0.8rem;
 }
 .personal p{
