--- a/mobile/web/resources/css/personal.css
+++ b/mobile/web/resources/css/personal.css
@@ -1,135 +1,145 @@
-*{
-	padding: 0;
-	margin: 0;
+* {
+    padding: 0;
+    margin: 0;
 }
-body{
+
+body {
     background-color: #F8F8F9;
 }
 
 /*header*/
-.header{
-	width: 100%;
-	height: 34rem;
-	background-color: #4371FB;
+.header {
+    width: 100%;
+    height: 8.13rem;
+    padding: 0 3rem;
+    background-color: #fff;
+    box-sizing: border-box;
+
 }
-.personal{
-	height: 8.13rem;
-	padding: 0 3rem;
-	background: #fff;
-	font-size: 6rem;
-	border-bottom: 1px solid #E4E6F0;
+
+.header i {
+    color: #3072F3;
 }
-.personal a{
-	float: left;
-	color: #3072F3;
-	display: inline-block;
-	width: 22.8%;
+
+.header > .back {
+    width: 50%;
+    float: left;
+    text-align: left;
+    font-size: 6rem;
 }
-.personal img{
-	display: inline-block;
-	width: 77.1899%;
-	height: 4.75rem;
-	margin-bottom: 0.8rem;
+
+.header > .back img {
+    width: 36%;
+    height: 4.75rem;
+    margin-bottom: 0.84rem;
 }
-.personal p{
-	float: right;
-	margin-top: 1.5rem;
-	margin-right: 0.5rem;
-	font-size: 4rem;
-	color: #3072F3;
+
+.header > .userCenter {
+    width: 50%;
+    float: right;
+    line-height: 8.13rem;
+    text-align: right;
+    font-size: 4rem;
 }
 
 /*用户--登录/注册*/
-.userLogin{
-	height: 28rem;
+.userLogin {
+    height: 28rem;
+    text-align: center;
+    width: 100%;
+    background-color: #4371FB;
 }
-.userLogin img{
-	display: block;
-	width: 9rem;
-	height: 9rem;
-	margin: 5rem auto 0 auto;
+
+.userLogin > img {
+    width: 9rem;
+    height: 9rem;
+    margin-top: 5rem;
 }
-.userLogin .username{
-	display: inline-block;
-	height: 8rem;
-	margin-top: 0.6rem;
-	line-height: 8rem;
-	width: 100%;
-	font-size: 4rem;
-	color: #E4E6F0;
-	text-align: center;
+
+.userLogin > span {
+    display: inline-block;
+    height: 8rem;
+    margin-top: 0.6rem;
+    line-height: 8rem;
+    font-size: 4rem;
+    color: #E4E6F0;
 }
-.login{
-	width:50%;
-	height: 6rem;
-	margin: 4rem auto 0 auto;
+
+.login {
+    width: 50%;
+    height: 6rem;
+    margin: 4rem auto 0 auto;
 }
-.login .btn{
-	width: 43.05%;
-	height: 6rem;
-	color: #fff;
-	text-align: center;
-	font: 2.5rem/6rem "宋体";
-	border: solid 1px #fff;
-	margin:0 1rem;
-	letter-spacing: 0.5rem;
-	float: left;
+
+.login .btn {
+    width: 43.05%;
+    height: 6rem;
+    color: #fff;
+    text-align: center;
+    font: 2.5rem/6rem "宋体";
+    border: solid 1px #fff;
+    margin: 0 1rem;
+    letter-spacing: 0.5rem;
+    float: left;
 }
 
 /*main*/
-.main{
-	width: 100%;
-	/*height: 60rem;*/
-	background-color: #fff;
-	margin-top: 2rem;
+.main {
+    width: 100%;
+    background-color: #fff;
+    margin-top: 2rem;
     border-top: 2px solid #E4E6F0;
     border-bottom: 2px solid #E4E6F0;
 }
-.mainBox{
-	width: 100%;
-	height: 9rem;
-	line-height: 9rem;
-	/*background: pink;*/
+
+.mainBox {
+    height: 9rem;
+    line-height: 9rem;
 }
 
-.mainBox .mainLeft{
-	width: 10%;
-	font-size: 3.5rem;
-	color: #F7B086;
-	padding-left: 3rem;
-	float: left;
+.mainBox .mainLeft {
+    width: 10%;
+    font-size: 3.5rem;
+    color: #F7B086;
+    padding-left: 3rem;
+    float: left;
 }
-.mainBox .mainRit{
-	width: 85%;
-	font: 2.5rem/9rem "宋体";
-	float: left;
+
+.mainBox .mainRit {
+    width: 85%;
+    font: 2.5rem/9rem "宋体";
+    float: left;
     border-bottom: 1px solid #e2e2e2;
 }
-.mainBox .gt{
-	font-size: 4rem;
-	padding-right: 3rem;
-	float: right;
-	color: #999;
+
+.mainBox .gt {
+    font-size: 4rem;
+    padding-right: 3rem;
+    float: right;
+    color: #999;
 }
-.mainBox a{
+
+.mainBox a {
     color: #000;
 }
-.none_border{
-	border: none !important;
+
+.none_border {
+    border: none !important;
 }
 
 /*Logout start*/
-.logout{
-	width: 90%;
-	height: 7rem;
-	margin: 10rem auto;
+.logout {
+    width: 90%;
+    height: 7rem;
+    margin: 10rem auto;
     background-color: #fff;
     border: 0.1rem solid #c5c5c5;
 }
-.logout button{
-	width: 100%;
-	height: 7rem;
-	text-align: center;
-	font: 2.5rem/7rem '宋体';
-	border: none;
+
+.logout button {
+    width: 100%;
+    height: 7rem;
+    text-align: center;
+    font: 2.5rem/7rem '宋体';
+    border: none;
 }
