--- a/mobile/web/resources/css/foundation_site.css
+++ b/mobile/web/resources/css/foundation_site.css
@@ -1,58 +1,111 @@
-*{
-	padding: 0;
-	margin: 0;
+* {
+    padding: 0;
+    margin: 0;
 }
 
 /*foundation_site*/
-.foundation_site{
-	width: 100%;
-	height: 100%;
-}
-.siteList{
-	padding: 2rem;
-}
-.userTit{
-	font: 2.65rem/5rem "微软雅黑";
-}
-.userTit span{
-	color: #E4393C;
-    margin: 0 0.5rem;
-}
-.siteCont1,.siteCont2{
-	width: 100%;
-	margin: 0 auto;
-	height: 8rem;
-	background: #F8F8F9;  
-	border-bottom: 0.1rem solid #ccc;
-}
-.siteCont1 p{
-	width: 33.3%;
-	height: 8rem;
-	text-align: center;
-	font: 1.88rem/8rem "微软雅黑";
-	float: left;
-	box-sizing: border-box;
-	padding: 1rem;
-}
-.siteCont2 p{
-	width: 33.3%;
-	height: 8rem;
-	text-align: center;
-	font: 1.8rem/2.6rem "微软雅黑";
-	word-wrap:break-word;
-	display: -webkit-box;/*多行文本超出隐藏用省略号代替*/
-    -webkit-box-orient: vertical;/*多行文本超出隐藏用省略号代替*/
-    -webkit-line-clamp: 3;/*多行文本超出隐藏用省略号代替*/
-	overflow: hidden;/*多行文本超出隐藏用省略号代替*/
-	float: left;
-	box-sizing: border-box;
-	padding: 1rem;
+.foundation_site {
+    width: 100%;
+    height: 100%;
 }
 
-.siteCont2 p>a{
-	width: 100%;
-	word-wrap:break-word;
-	display: -webkit-box;/*多行文本超出隐藏用省略号代替*/
-	-webkit-box-orient: vertical;/*多行文本超出隐藏用省略号代替*/
-	-webkit-line-clamp: 3;/*多行文本超出隐藏用省略号代替*/
+.siteList {
+    padding: 2rem;
+}
+
+.userTit {
+    font: 2.65rem/5rem "微软雅黑";
+}
+
+.userTit span {
+    color: #E4393C;
+    margin: 0 0.5rem;
+}
+
+.siteCont1, .siteCont2 {
+    width: 100%;
+    margin: 0 auto;
+    height: 8rem;
+    background: #F8F8F9;
+    border-bottom: 0.1rem solid #ccc;
+}
+
+.siteCont1 p {
+    width: 33.3%;
+    height: 8rem;
+    text-align: center;
+    font: 1.88rem/8rem "微软雅黑";
+    float: left;
+    box-sizing: border-box;
+    padding: 1rem;
+}
+
+.siteCont2 p {
+    width: 33.3%;
+    height: 8rem;
+    text-align: center;
+    font: 1.8rem/2.6rem "微软雅黑";
+    word-wrap: break-word;
+    display: -webkit-box; /*多行文本超出隐藏用省略号代替*/
+    -webkit-box-orient: vertical; /*多行文本超出隐藏用省略号代替*/
+    -webkit-line-clamp: 3; /*多行文本超出隐藏用省略号代替*/
+    overflow: hidden; /*多行文本超出隐藏用省略号代替*/
+    float: left;
+    box-sizing: border-box;
+    padding: 1rem;
+}
+
+.siteCont2 p > a {
+    width: 100%;
+    word-wrap: break-word;
+    display: -webkit-box; /*多行文本超出隐藏用省略号代替*/
+    -webkit-box-orient: vertical; /*多行文本超出隐藏用省略号代替*/
+    -webkit-line-clamp: 3; /*多行文本超出隐藏用省略号代替*/
+}
+
+.fLeft {
+    float: left;
+}
+
+.fRight {
+    float: right;
+}
+
+.foundation_site_new {
+    width: 100%;
+    padding: 2rem;
+    box-sizing: border-box;
+}
+
+.siteCont:first-child {
+    border-top: 0.1rem solid #ccc;
+}
+
+.siteCont {
+    font: 2rem/4rem "微软雅黑";
+    padding: 2rem 0;
+    border-bottom: 0.1rem solid #ccc;
+}
+
+.siteListTitle {
+    height: 4rem;
+    line-height: 4rem;
+    padding-right: 6rem;
+}
+
+.siteListCount {
+    padding: 1rem 4rem;
+    display: none;
+    margin-top: 0.2rem;
+    min-height: 3.6rem;
+}
+
+.siteListCountInfo {
+    height: 3.6rem;
+    font: 1.8rem/3.6rem "微软雅黑";
+    text-align: center;
+}
+
+.siteListCountIntro {
+    font: 1.8rem/3.6rem "微软雅黑";
 }
