--- a/mobile/web/resources/css/index.css
+++ b/mobile/web/resources/css/index.css
@@ -178,9 +178,10 @@ body{
 }
 .redadat .tit{
     margin-bottom: 1rem;
-	line-height: 2.8rem;
-	max-height: 5.6rem;
+	line-height: 3.2rem;
     overflow: hidden;
+	text-overflow:ellipsis;
+	white-space: nowrap;
     font-size: 2.7rem;
     color: #101d37;
 }
