--- a/platform/web/resources/css/list.css
+++ b/platform/web/resources/css/list.css
@@ -1,131 +1,152 @@
-*{
-	margin: 0px;
-	padding: 0px;
+* {
+    margin: 0px;
+    padding: 0px;
 }
 
 /*content start*/
-.content{
-	margin-top: 60px;
+.content {
+    margin-top: 60px;
 }
-.list_group1{
+
+.list_group1 {
     border-bottom: 2px solid #3072f6;
     cursor: pointer;
 }
-.list_group1 ul li{
-	width: 100px;
-	height: 46px;
-	text-align: center;
-	font:bold 15px/46px "微软雅黑";
-	color: #333;
-	float: left;
+
+.list_group1 ul li {
+    width: 100px;
+    height: 46px;
+    text-align: center;
+    font: bold 15px/46px "微软雅黑";
+    color: #333;
+    float: left;
 }
-.list_group1 ul .sort_active{
-	color: #fff;
-	background: #3072F6;
+
+.list_group1 ul .sort_active {
+    color: #fff;
+    background: #3072F6;
 }
-.list_group1 li:hover{
-	color: #fff;
-	background: #3072F6;
+
+.list_group1 li:hover {
+    color: #fff;
+    background: #3072F6;
 }
-.list_tit{
+
+.list_tit {
     color: #101d37;
     font: bold 22px/55px "微软雅黑";
     border-bottom: 1px solid #f1f1f1;
 }
-.listCont{
-	position: relative;
+
+.listCont {
+    position: relative;
 }
+
 .listCont li {
     padding: 35px 0;
     border-bottom: 1px solid #f1f1f1;
 }
-.listData img{
-	width: 300px;
-	height: 174px;
-	display: block;
-	float: left;
+
+.listData img {
+    width: 300px;
+    height: 174px;
+    display: block;
+    float: left;
 }
-.listData .info{
-	width: 860px;
-	height: 174px;
-	float: right;
+
+.listData .info {
+    width: 860px;
+    height: 174px;
+    float: right;
 }
-.info .info_tit{
-	font: bold 22px/30px "微软雅黑";
+
+.info .info_tit {
+    font: bold 22px/30px "微软雅黑";
 }
-.info .info_tit a{
+
+.info .info_tit a {
     color: #101d37;
-	text-decoration: none;
+    text-decoration: none;
 }
-.info .info_tit a:hover{
-    color:#3072F6;
-	text-decoration: none;
+
+.info .info_tit a:hover {
+    color: #3072F6;
+    text-decoration: none;
 }
-.info .address{
-	font-size: 14px;
-	margin-top: 13px;
+
+.info .address {
+    font-size: 14px;
+    margin-top: 13px;
 }
-.address i{
-	color: #616669;
-	font-size: 17px;
+
+.address i {
+    color: #616669;
+    font-size: 17px;
 }
-.spans span{
+
+.spans span {
     display: inline-block;
     color: #849aae;
     text-align: center;
-	font: 12px/30px "微软雅黑";
-	background: #F4F7F9;
-	margin-right: 6px;
-	margin-top: 18px;
-	padding: 0 10px;
-	float: left;
+    font: 12px/30px "微软雅黑";
+    background: #F4F7F9;
+    margin-right: 6px;
+    margin-top: 18px;
+    padding: 0 10px;
+    float: left;
 }
+
 /*关注*/
-.follow{
-	width: 40px;
-	color: #ccc;
-	text-align: center;
-	font: 14px/22px "微软雅黑";
-	position: absolute;
-	top: 38px;
-	right: 10px;
-	cursor: pointer;
+.follow {
+    width: 40px;
+    color: #ccc;
+    text-align: center;
+    font: 14px/22px "微软雅黑";
+    position: absolute;
+    top: 38px;
+    right: 10px;
+    cursor: pointer;
     border: 1px solid #f1f1f1;
 }
-.unit_price{
-	width: 120px;
-	text-align: left;
-	font-size: 14px;
-	position: absolute;
-	top: 70px;
-	right: 0;
+
+.unit_price {
+    width: 120px;
+    text-align: left;
+    font-size: 14px;
+    position: absolute;
+    top: 70px;
+    right: 0;
 }
-.unit_price .price{
-	color: red;
+
+.unit_price .price {
+    color: red;
 }
+
 /*content end*/
 
 /*recommen-star*/
-.recommend{
-	width: 100%;
-	/*height: 400px;*/
-	background: #F5F5F6;
+.recommend {
+    width: 100%;
+    /*height: 400px;*/
+    background: #F5F5F6;
 }
-.recom_cont .recomTit{
-	color: #101d37;
+
+.recom_cont .recomTit {
+    color: #101d37;
     padding-top: 46px;
-	font:bold 24px/30px "微软雅黑";
+    font: bold 24px/30px "微软雅黑";
 }
-.recomList{
-	overflow: hidden;
-	margin-top: 24px;
+
+.recomList {
+    overflow: hidden;
+    margin-top: 24px;
     padding-bottom: 50px;
 }
-    
-.recomList li{
-	width: 226px;
-	height: 180px;
-	color: #db4c3f;
+
+.recomList li {
+    width: 226px;
+    height: 180px;
+    color: #db4c3f;
     font-size: 12px;
     font-weight: 700;
     line-height: 1;
@@ -133,15 +154,18 @@
     margin-right: 17px;
     float: left;
 }
-.marginRt{
-	margin-right: 0px !important;
+
+.marginRt {
+    margin-right: 0 !important;
 }
-.recomList li img{
-	display: block;
-	width: 228px;
-	height: 180px;
+
+.recomList li img {
+    display: block;
+    width: 228px;
+    height: 180px;
 }
-.description{
+
+.description {
     position: absolute;
     top: 0;
     text-align: center;
@@ -149,13 +173,19 @@
     line-height: 180px;
     color: #fff;
     font-weight: 700;
-    text-shadow: 0 1px 4px rgba(0,0,0,0.6);
+    text-shadow: 0 1px 4px rgba(0, 0, 0, 0.6);
 }
-.rec_price span{
-	line-height: 1;
-    padding-top: 8px;
-	display: inline-block;
-	color: #333;
-	text-indent: 0.4em;
+
+.rec_price {
+    text-align: center;
+    padding: 8px 4px 0 4px;
+    display: inline-block;
+    color: #db4c3f;
+    box-sizing: border-box;
 }
+
+.rec_price span {
+    color: #333;
+}
+
 /*recommend-end*/
