--- a/platform/web/resources/css/details.css
+++ b/platform/web/resources/css/details.css
@@ -205,6 +205,34 @@
     padding: 20px 0;
     border-top: solid 1px #ccc;
     border-bottom: solid 1px #ccc;
+    font-size: 16px;
+    line-height: 26px;
+}
+
+.intension {
+    height: 30px;
+    line-height: 30px;
+    margin-bottom: 8px;
+    text-align: center;
+}
+
+.intension:last-child {
+    margin-bottom: 0;
+}
+
+.intension .name {
+    float: left;
+    width: 20%;
+}
+
+.intension .ratio {
+    float: left;
+    width: 80%;
+    color: #f0f4f7;
+    background: url("../images/blue.png") silver repeat-y;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
 }
 
 .infors_name {
