--- a/mobile/web/resources/css/common.css
+++ b/mobile/web/resources/css/common.css
@@ -12,24 +12,36 @@
 
 .header {
     width: 10rem;
-    height: 1rem;
+    height: 1.6rem;
     padding: 0 0.32rem;
     border-bottom: 0.01rem solid #E4E6F0;
     background-color: #fff;
     box-sizing: border-box;
 }
 
-.header img {
-    width: 1.74rem;
-    height: 0.6rem;
-    margin: 0.2rem auto 0.2rem 0.2rem;
-}
-
 .header .picFont {
-    height: 1rem;
-    line-height: 1rem;
+    height: 1.6rem;
+    line-height: 1.6rem;
     color: #3072F3;
     font-size: 0.6rem;
+}
+
+.header .pic {
+    height: 1.6rem;
+    line-height: 1.6rem;
+    margin-left: 0.2rem;
+    display: table;
+}
+
+.header .pic > span {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+}
+
+.header .pic > span > img {
+    width: 1.8rem;
+    height: auto;
 }
 
 .contentBox {
