--- a/mobile/web/resources/css/common.css
+++ b/mobile/web/resources/css/common.css
@@ -26,15 +26,15 @@
     font-size: 0.6rem;
 }
 
-.header .pic:first-child{
-    font-size: 0.9rem;
+.header .pic:first-child {
+    font-size: 1rem;
 }
 
 .header .pic > img {
     display: inline-block;
     width: 1.7rem;
     height: 0.78rem;
-    margin-left: 0.2rem;
+    margin: 0.36rem auto 0.36rem 0.2rem;
 }
 
 .contentBox {
