--- a/mobile/web/resources/css/common.css
+++ b/mobile/web/resources/css/common.css
@@ -1,15 +1,3 @@
-.left {
-    float: left;
-}
-
-.right {
-    float: right;
-}
-
-.clear {
-    clear: both;
-}
-
 .header {
     width: 10rem;
     height: 1.5rem;
@@ -24,6 +12,11 @@
     line-height: 1.5rem;
     color: #3072F3;
     font-size: 0.6rem;
+    float: right;
+}
+
+.header .pic:first-child {
+    float: left;
 }
 
 .header .pic:first-child * {
