--- a/mobile/web/resources/css/cobber-field.css
+++ b/mobile/web/resources/css/cobber-field.css
@@ -60,7 +60,7 @@
 
 }
 
-.ident > .left {
+.ident .left {
     float: left;
     font-size: 0.28rem;
     line-height: 0.8rem;
@@ -88,7 +88,7 @@
     color: #222222;
 }
 
-.content > .image {
+.content .image {
     height: 2.2rem;
     width: 3.2rem;
     float: left;
