--- a/mobile/web/resources/css/common.css
+++ b/mobile/web/resources/css/common.css
@@ -76,3 +76,252 @@
     text-decoration: none;
     border-radius: 0.04rem;
 }
+
+.areaModalBox {
+    position: fixed;
+    bottom: -0.1rem;
+    left: 0.4rem;
+    z-index: 999;
+    background: white;
+    height: 8.1rem;
+    width: 9.2rem;
+    padding: 1rem;
+    box-sizing: border-box;
+    border-radius: 0.1rem;
+    border: 1px solid silver;
+    border-bottom: none;
+    display: none;
+}
+
+.areaModalBox > .areaModalBack {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1rem;
+    height: 1rem;
+    line-height: 1rem;
+    text-align: center;
+    font-size: 0.8rem;
+    color: coral;
+}
+
+.areaModalBox > .areaModalTitle {
+    position: absolute;
+    top: 0;
+    left: 1rem;
+    width: 7.2rem;
+    height: 1rem;
+    line-height: 1rem;
+    text-align: center;
+    font-size: 0.5rem;
+}
+
+.areaModalBox > .areaModalClose {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 1rem;
+    height: 1rem;
+    line-height: 1rem;
+    text-align: center;
+    font-size: 0.64rem;
+    color: coral;
+}
+
+.areaModalBox > .areaModalContent {
+    display: block;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    text-align: center;
+}
+
+.areaModalContent::-webkit-scrollbar {
+    display: none;
+}
+
+.areaModalContent > * {
+    width: 100%;
+    height: 1.2rem;
+    line-height: 1.2rem;
+    font-size: 0.4rem;
+    border-bottom: 1px solid silver;
+}
+
+.areaModalContent > *:first-child {
+    border-top: 1px solid silver;
+}
+
+.areaModalContent > .selected {
+    border-bottom: 1px solid #3072f6;
+}
+
+.wallModalBox {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    padding: 1rem 0;
+    box-sizing: border-box;
+    background: rgba(0, 0, 0, 0.6);
+    height: 100%;
+    width: 10rem;
+    display: none;
+}
+
+.wallModalBox > .wallModalClose {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 1rem;
+    height: 1rem;
+    line-height: 1rem;
+    text-align: center;
+    font-size: 0.64rem;
+    color: coral;
+}
+
+.wallModalBox > .wallModalContent {
+    width: 10rem;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+.wallModalContent::-webkit-scrollbar {
+    display: none;
+}
+
+.wallModalContent > img {
+    width: 10rem;
+}
+
+.selectModalBox {
+    position: fixed;
+    bottom: -0.1rem;
+    left: 0.4rem;
+    z-index: 999;
+    background: white;
+    height: 8.1rem;
+    width: 9.2rem;
+    padding: 1rem;
+    box-sizing: border-box;
+    border-radius: 0.1rem;
+    border: 1px solid silver;
+    border-bottom: none;
+    display: none;
+}
+
+.selectModalBox > .selectModalTitle {
+    position: absolute;
+    top: 0;
+    left: 1rem;
+    width: 7.2rem;
+    height: 1rem;
+    line-height: 1rem;
+    text-align: center;
+    font-size: 0.5rem;
+}
+
+.selectModalBox > .selectModalClose {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 1rem;
+    height: 1rem;
+    line-height: 1rem;
+    text-align: center;
+    font-size: 0.64rem;
+    color: coral;
+}
+
+.selectModalBox > .selectModalContent {
+    display: block;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    text-align: center;
+}
+
+.selectModalContent::-webkit-scrollbar {
+    display: none;
+}
+
+.selectModalContent > * {
+    width: 100%;
+    height: 1.2rem;
+    line-height: 1.2rem;
+    font-size: 0.4rem;
+    border-bottom: 1px solid silver;
+}
+
+.selectModalContent > *:first-child {
+    border-top: 1px solid silver;
+}
+
+.selectModalContent > .selected {
+    border-bottom: 1px solid #3072f6;
+}
+
+.introModalBox {
+    position: fixed;
+    bottom: -0.1rem;
+    left: 0.4rem;
+    z-index: 999;
+    background: white;
+    height: 8.1rem;
+    width: 9.2rem;
+    padding: 1rem;
+    box-sizing: border-box;
+    border-radius: 0.1rem;
+    border: 1px solid silver;
+    border-bottom: none;
+    display: none;
+}
+
+.introModalBox > .introModalTitle {
+    position: absolute;
+    top: 0;
+    left: 1rem;
+    width: 7.2rem;
+    height: 1rem;
+    line-height: 1rem;
+    text-align: center;
+    font-size: 0.5rem;
+}
+
+.introModalBox > .introModalClose {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 1rem;
+    height: 1rem;
+    line-height: 1rem;
+    text-align: center;
+    font-size: 0.64rem;
+    color: coral;
+}
+
+.introModalBox > .introModalContent {
+    box-sizing: border-box;
+    border: 1px solid silver;
+    display: block;
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    font-size: 0.4rem;
+    line-height: 0.72rem;
+    text-indent: 0.8rem;
+}
+
+.introModalBox::-webkit-scrollbar {
+    display: none;
+}
+
+
