--- a/mobile/web/resources/css/common.css
+++ b/mobile/web/resources/css/common.css
@@ -77,6 +77,14 @@
     border-radius: 0.04rem;
 }
 
+.contentForm > .smallTitle {
+    width: 9.2rem;
+    height: 1rem;
+    line-height: 1rem;
+    font-size: 0.32rem;
+    text-align: center;
+}
+
 .areaModalBox {
     position: fixed;
     bottom: -0.1rem;
@@ -166,7 +174,7 @@
     z-index: 999;
     padding: 1rem 0;
     box-sizing: border-box;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.8);
     height: 100%;
     width: 10rem;
     display: none;
@@ -184,19 +192,47 @@
     color: coral;
 }
 
+.wallModalBox .pagination {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 2rem;
+    height: 1rem;
+    line-height: 1rem;
+    font-size: 0.52rem;
+    text-indent: 0.18rem;
+    color: coral;
+}
+
 .wallModalBox > .wallModalContent {
     width: 10rem;
     height: 100%;
-    overflow-x: hidden;
-    overflow-y: scroll;
+    display: table;
 }
 
-.wallModalContent::-webkit-scrollbar {
-    display: none;
+.wallModalContent > span {
+    display: table-cell;
+    vertical-align: middle;
 }
 
-.wallModalContent > img {
+.wallModalContent .swiper-container {
     width: 10rem;
+    overflow: visible;
+}
+
+.wallModalContent .swiper-wrapper {
+    display: table;
+    width: 10rem;
+}
+
+.swiper-wrapper > span {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.swiper-wrapper > span > img {
+    width: 10rem;
+    height: auto;
 }
 
 .selectModalBox {
@@ -320,7 +356,62 @@
     text-indent: 0.8rem;
 }
 
-.introModalBox::-webkit-scrollbar {
+.introModalContent::-webkit-scrollbar {
+    display: none;
+}
+
+.uploadImgModalBox {
+    position: fixed;
+    bottom: -0.1rem;
+    left: 0.4rem;
+    z-index: 999;
+    background: white;
+    height: 8.1rem;
+    width: 9.2rem;
+    padding: 1rem;
+    box-sizing: border-box;
+    border-radius: 0.1rem;
+    border: 1px solid silver;
+    border-bottom: none;
+    display: none;
+}
+
+.uploadImgModalBox > .uploadImgModalTitle {
+    position: absolute;
+    top: 0;
+    left: 1rem;
+    width: 7.2rem;
+    height: 1rem;
+    line-height: 1rem;
+    text-align: center;
+    font-size: 0.5rem;
+}
+
+.uploadImgModalBox > .uploadImgModalClose {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 1rem;
+    height: 1rem;
+    line-height: 1rem;
+    text-align: center;
+    font-size: 0.64rem;
+    color: coral;
+}
+
+.uploadImgModalBox > .uploadImgModalContent {
+    box-sizing: border-box;
+    border: 1px solid silver;
+    display: block;
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    font-size: 0.4rem;
+    line-height: 0.72rem;
+    text-indent: 0.8rem;
+}
+
+.uploadImgModalContent::-webkit-scrollbar {
     display: none;
 }
 
