--- a/mobile/web/resources/css/estimate.css
+++ b/mobile/web/resources/css/estimate.css
@@ -4,7 +4,7 @@
     height: 12rem;
     background: #fff;
     box-sizing: border-box;
-    margin: 0 auto 0.4rem auto;
+    margin: 1.5rem auto 0.4rem auto;
 }
 
 .estimate td {
